--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,13 +6,20 @@
 body{
     background-color: hsl(0, 4%, 77%);
 }
+.containertitulo{
+    background-image: linear-gradient(hsl(246, 100%, 50%), hsl(216, 71%, 81%));
+    text-align: left;
+    color: aliceblue;
+    padding: 60px;
+    
+}
 
 
 nav{
     text-align: right;
+    margin-top: 0px;
+    
     padding: 10px;
-    background-image: linear-gradient(hsl(246, 100%, 50%), hsl(216, 71%, 81%));
-    padding: 25px;
     
     
 
@@ -28,12 +35,7 @@ a:hover{
 }
 
 
-.containertitulo{
-    padding: 40px;
-    background-image: url(descarga.jpg);
-    margin-top: 0;
-    color: aliceblue;
-}
+
 
 
 
@@ -50,7 +52,9 @@ a:hover{
     padding: 15px;
     border-radius: 20px;
     background-color:rgb(104, 100, 100);
-    margin-top: 15px;
+    margin-top: 25px;
+
+    margin-bottom: 25px;
     width: 50%;
 }
 
@@ -103,43 +107,37 @@ input[type=text], select, textarea {
     padding-block: center;
     
   }
-  
+  .campoinvalido{
+    border-color: rgb(255, 0, 0) !important;
+  }
+  .ocultarerror{
+    display: none;
+  }
+ 
 .grid-container{
     display: grid;
-    grid-template-columns: minmax(100px);
+    grid-template-columns: minmax(150px);
     margin-top: 20px;
     grid-gap: 20px;
     display: flex;
     text-align: center;
-    text-decoration: underline;
+    margin-bottom: 40px;
+}
+
+
+
+.button{
+    padding: 0px;
+    margin: 0px;
 }
 
 .hover.galeria{
     text-decoration: underline;
 }
-.grid-container-cuyo{
-    display: grid;
-    grid-template-columns: minmax(150px);
-   margin-top: 20px;
-    grid-gap: 20px;
-    display: flex;
-    text-align: center;
-    
-    
-}
 
-p{
-    color: rgb(8, 8, 8);
-}
+    
 
-.grid-container-norte{
-    display: grid;
-    grid-template-columns: minmax(150px);
-    margin-top: 20px;
-    grid-gap: 20px;
-    display: flex;
-    text-align: center;
-}
+
 
 g{
     
@@ -160,4 +158,76 @@ g{
     display: block;
     object-fit: cover;
     align-items: stretch;
+}
+.containerfooter{
+    display: grid;
+    background-color: beige;
+    margin-top: 20px;
+}
+
+.flex{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.texto{
+    padding: 300px;
+    text-align: center;
+    color: antiquewhite;
+
+}
+h1{
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+.flex{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal{
+    position: fixed;
+    display: none;
+    z-index: 1;
+    overflow: auto;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0,0,0,.452);
+
+}
+.contenido-modal{
+position: relative;
+background-color: aliceblue;
+margin: auto;
+width: 30%;
+}
+@keyframes modal{
+    from{top: -330px; opacity: 0;}
+    to{top: 0; opacity: 1;}
+}
+.close{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+.close:hover{
+    color: blue;
+    text-decoration: none;
+    cursor: pointer;
+}
+.modal-header, .footer{
+    padding: 8px 0px;
+    background-color:blue ;
+    color: aliceblue;
+}
+.modalbody{
+    padding: 20px 16px;
 }
